# realLambdaPunter

./: LICENSE  README.md  lambda-punter-ai.cabal  realLambdaPunter.cabal  stack.yaml
app/: Main.hs
src/: .#Lib.hs  LambdaPunter.hs  LambdaPunter.lhs  LambdaPunter.md  Lib.hs
src/LambdaPunter/: Base.lhs  Base.md  Graph.hs  Graph.lhs  Graph.md  Greedo.lhs  Greedo.md  Map.lhs  Map.md  Move.lhs  Move.md  Player.hs  Punter.lhs  Punter.md  Randy.lhs  Randy.md  Score.hs  Score.lhs  Score.md  TH.hs  TH.lhs  TH.md  Tortoise.lhs  Tortoise.md
