name:                realLambdaPunter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wenkokke/realLambdaPunter#readme
license:             BSD3
license-file:        LICENSE
author:              Wen Kokke
maintainer:          wen.kokke@gmail.com
copyright:           (c) 2017 Wen Kokke
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LambdaPunter
  other-modules:       LambdaPunter.TH
                     , LambdaPunter.Graph
                     , LambdaPunter.Punter
                     , LambdaPunter.Move
                     , LambdaPunter.Score
                     , LambdaPunter.Base
                     , LambdaPunter.Randy
  ghc-options:         -pgmL markdown-unlit
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , fgl
                     , random
                     , text
  default-language:    Haskell2010

executable realLambdaPunter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -pgmL markdown-unlit
  build-depends:       base
                     , realLambdaPunter
                     , network
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wenkokke/realLambdaPunter
